implementing verify_email databasetabse , database logic, and gRPC api
